# spotify-recommender

./: .gitignore  main.py  pyproject.toml
src/songify/SpotifyConnector/: Browse.py
src/songify/recommender/: Encoder.py  FeedForward.py  Utils.py  transformer.py
src/songify/song-searcher/: browse_spotify.py
